# amethyst_voxel

./: Cargo.toml  changelog.md  readme.md
.github/workflows/: ci.yml  clippy.yml
compiled/: voxels.vert.spv  voxels_skinned.vert.spv
config/: display.ron
examples/: hello_voxel.rs
examples/assets/prefab/: arc_ball_camera.ron  hello_voxel.ron
examples/config/: display.ron
shaders/: voxels.vert  voxels_skinned.vert
src/: ambient_occlusion.rs  bundle.rs  collision.rs  context.rs  coordinate.rs  io.rs  lib.rs  material.rs  mesh.rs  model.rs  movement.rs  pass.rs  plugin.rs  prefab.rs  prelude.rs  raycast.rs  side.rs  system.rs  triangulate.rs  utils.rs  vox.rs  voxel.rs  world.rs
