[package]
name = "amethyst_voxel"
version = "0.1.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.12", features = ["metal"] }
nalgebra-glm = "0.2.0"
derivative = "1.0"
smallvec = "0.6.9"
failure = "0.1"
rendy = {version = "^0.3.2", default-features = false, features = ["base", "mesh-obj", "texture-image", "texture-palette", "serde-1"]}
rand = "0.7"
byteorder = "1"
lazy_static = "1.3"
futures = "0.1"
