[package]
name = "amethyst_voxel"
version = "0.2.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version="0.15", features = ["vulkan"] }
nalgebra-glm = "0.5.0"
derivative = "1.0"
smallvec = "0.6.9"
failure = "0.1"
rand = "0.7"
byteorder = "1"
lazy_static = "1.3"
futures = "0.1"
crossbeam = "0.7"
rayon = "1.1.0"
image = "0.22"
ron = "*"
serde = "*"
serde_derive = "*"
